--- a/demo/index.html
+++ b/demo/index.html
@@ -2,93 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Veldra Demo</title>
-  <meta name="description" content="Watch the regtest demo and run Veldra locally.">
-  <meta name="theme-color" content="#0b1b2b">
-
-  <link rel="icon" type="image/png" href="/assets/brand/favicon.png?v=20260120">
-  <link rel="apple-touch-icon" href="/assets/brand/veldra-mark.png?v=20260120">
-  <link rel="stylesheet" href="/assets/style.css?v=3">
-  <script src="/assets/script.js?v=3" defer></script>
+  <meta http-equiv="refresh" content="0;url=/product/#demo">
+  <link rel="canonical" href="https://veldra.org/product/">
+  <title>Redirecting to ReserveGrid OS</title>
 </head>
-
 <body>
-  <div class="topbar">
-    <div class="container">
-      <div class="nav">
-        <a class="brand" href="/" aria-label="Veldra home">
-          <img src="/assets/brand/veldra-logo.png?v=20260120" alt="Veldra">
-        </a>
-
-        <div class="navlinks">
-          <a href="/">Home</a>
-          <a aria-current="page" href="/demo/">Demo</a>
-          <a href="/how-it-works/">How it works</a>
-          <a href="/policy/">Policy</a>
-          <a href="/security/">Security</a>
-          <a href="/about/">About</a>
-        </div>
-
-        <div class="navcta">
-          <a class="btn primary" href="https://github.com/LeavesJ/veldra" target="_blank" rel="noreferrer">Repo</a>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <main class="container">
-    <section class="hero">
-      <div class="kicker"><span class="kdot"></span> Demo</div>
-      <h1>Regtest walkthrough</h1>
-      <p class="lede">One run. Multiple fee tiers. Multiple reject reasons. Clear context.</p>
-    </section>
-
-    <section class="section">
-      <div class="grid">
-        <div class="card full">
-          <h3>Video</h3>
-          <div class="hr"></div>
-          <div class="video">
-            <iframe
-              src="https://www.youtube.com/embed/lDIIl7Oe73Y"
-              title="Veldra demo"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen></iframe>
-          </div>
-        </div>
-
-        <div class="card half">
-          <h3>Run locally</h3>
-          <p>Start regtest, template manager, and verifier.</p>
-          <div class="hr"></div>
-          <div class="codepanel">
-            <button class="copybtn" onclick="copyTextFrom('qs')">Copy</button>
-<pre id="qs">git clone https://github.com/LeavesJ/veldra.git
-cd veldra
-cp .env.example .env
-./scripts/dev-regtest.sh</pre>
-          </div>
-        </div>
-
-        <div class="card half">
-          <h3>Open</h3>
-          <p>Verifier dashboard.</p>
-          <div class="hr"></div>
-          <div class="codepanel">
-            <button class="copybtn" onclick="copyTextFrom('open')">Copy</button>
-<pre id="open">http://127.0.0.1:8080</pre>
-          </div>
-          <div class="hr"></div>
-          <p class="callout">Do not expose this publicly without auth.</p>
-        </div>
-      </div>
-    </section>
-
-    <div class="footer">
-      <div>© 2026 Veldra, Inc.</div>
-      <div><a href="/security/">Security boundaries</a></div>
-    </div>
-  </main>
+  <p>Redirecting to <a href="/product/#demo">ReserveGrid OS</a>...</p>
 </body>
 </html>
