--- a/how-it-works/index.html
+++ b/how-it-works/index.html
@@ -2,124 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>How Veldra Works</title>
-  <meta name="description" content="Template flow, protocol objects, and what makes a reject traceable.">
-  <meta name="theme-color" content="#0b1b2b">
-
-  <link rel="icon" type="image/png" href="/assets/brand/favicon.png?v=20260120">
-  <link rel="apple-touch-icon" href="/assets/brand/veldra-mark.png?v=20260120">
-  <link rel="stylesheet" href="/assets/style.css?v=3">
-  <script src="/assets/script.js?v=3" defer></script>
+  <meta http-equiv="refresh" content="0;url=/product/">
+  <link rel="canonical" href="https://veldra.org/product/">
+  <title>Redirecting to ReserveGrid OS</title>
 </head>
-
 <body>
-  <div class="topbar">
-    <div class="container">
-      <div class="nav">
-        <a class="brand" href="/" aria-label="Veldra home">
-          <img src="/assets/brand/veldra-logo.png?v=20260120" alt="Veldra">
-        </a>
-
-        <div class="navlinks">
-          <a href="/">Home</a>
-          <a href="/demo/">Demo</a>
-          <a aria-current="page" href="/how-it-works/">How it works</a>
-          <a href="/policy/">Policy</a>
-          <a href="/security/">Security</a>
-          <a href="/about/">About</a>
-        </div>
-
-        <div class="navcta">
-          <a class="btn primary" href="/demo/">View demo</a>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <main class="container">
-    <section class="hero">
-      <div class="kicker"><span class="kdot"></span> System</div>
-      <h1>Templates in, verdicts out</h1>
-      <p class="lede">
-        ReserveGrid OS takes a candidate template, evaluates it against policy, and returns a verdict object that is safe to log and display.
-      </p>
-
-      <div class="badges">
-        <span class="badge accent">Deterministic</span>
-        <span class="badge navy">Traceable rejects</span>
-        <span class="badge navy">Policy visible</span>
-      </div>
-    </section>
-
-    <section class="section">
-      <div class="sectionhead">
-        <h2>Flow</h2>
-        <p class="hint">One contract, end to end</p>
-      </div>
-
-      <div class="grid">
-        <div class="card full">
-          <div class="kv">
-            <div class="k">1. Source</div><div class="v">Stratum v2 bridge or bitcoind produces a candidate template</div>
-            <div class="k">2. Manager</div><div class="v">Template manager packages it as <span class="mono">TemplatePropose</span></div>
-            <div class="k">3. Verifier</div><div class="v">Pool verifier loads <span class="mono">policy.toml</span>, evaluates, emits <span class="mono">TemplateVerdict</span></div>
-            <div class="k">4. Outputs</div><div class="v">Logs + dashboard consume the same verdict object</div>
-          </div>
-          <div class="hr"></div>
-          <p class="callout">If a template is rejected, the verifier must explain it with a stable reason code and measurable context.</p>
-        </div>
-
-        <div class="card half">
-          <h3>Protocol objects</h3>
-          <p>Minimal surface area.</p>
-          <div class="hr"></div>
-          <ul class="list">
-            <li><span class="mono">TemplatePropose</span>: candidate template + metadata</li>
-            <li><span class="mono">TemplateVerdict</span>: ACCEPT or REJECT + context</li>
-          </ul>
-        </div>
-
-        <div class="card half">
-          <h3>What “traceable” means</h3>
-          <p>Rejects are only useful when they are inspectable.</p>
-          <div class="hr"></div>
-          <ul class="list">
-            <li><span class="mono">reason_code</span></li>
-            <li><span class="mono">threshold_used</span></li>
-            <li><span class="mono">measured_value</span></li>
-            <li><span class="mono">tier</span> (when fee tiers apply)</li>
-          </ul>
-        </div>
-      </div>
-    </section>
-
-    <section class="section">
-      <div class="sectionhead">
-        <h2>Why this is built this way</h2>
-        <p class="hint">Operational sanity</p>
-      </div>
-
-      <div class="grid">
-        <div class="card">
-          <h3>Determinism</h3>
-          <p>Same template plus same policy yields the same verdict.</p>
-        </div>
-        <div class="card">
-          <h3>Policy visibility</h3>
-          <p>The active policy and thresholds are readable from UI and API.</p>
-        </div>
-        <div class="card">
-          <h3>Stable codes</h3>
-          <p>Reason codes do not change semantics silently.</p>
-        </div>
-      </div>
-    </section>
-
-    <div class="footer">
-      <div>© 2026 Veldra, Inc.</div>
-      <div>Next: <a href="/policy/">Policy</a></div>
-    </div>
-  </main>
+  <p>Redirecting to <a href="/product/">ReserveGrid OS</a>...</p>
 </body>
 </html>
