--- a/policy/index.html
+++ b/policy/index.html
@@ -2,230 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Veldra Policy</title>
-  <meta name="description" content="Reason codes, sample policy.toml, and the traceable reject contract.">
-  <meta name="theme-color" content="#0b1b2b">
-
-  <link rel="icon" type="image/png" href="/assets/brand/favicon.png?v=20260120">
-  <link rel="apple-touch-icon" href="/assets/brand/veldra-mark.png?v=20260120">
-  <link rel="stylesheet" href="/assets/style.css?v=3">
-  <script src="/assets/script.js?v=3" defer></script>
+  <meta http-equiv="refresh" content="0;url=/docs/">
+  <link rel="canonical" href="https://veldra.org/docs/">
+  <title>Redirecting to Documentation</title>
 </head>
-
 <body>
-  <div class="topbar">
-    <div class="container">
-      <div class="nav">
-        <a class="brand" href="/" aria-label="Veldra home">
-          <img src="/assets/brand/veldra-logo.png?v=20260120" alt="Veldra">
-        </a>
-
-        <div class="navlinks">
-          <a href="/">Home</a>
-          <a href="/demo/">Demo</a>
-          <a href="/how-it-works/">How it works</a>
-          <a aria-current="page" href="/policy/">Policy</a>
-          <a href="/security/">Security</a>
-          <a href="/about/">About</a>
-        </div>
-
-        <div class="navcta">
-          <a class="btn primary" href="/demo/">View demo</a>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <main class="container">
-    <section class="hero">
-      <div class="kicker"><span class="kdot"></span> Policy</div>
-      <h1>Reason codes and context</h1>
-      <p class="lede">
-        A reject is credible only when it names the failure and shows the numbers. ReserveGrid OS emits stable codes plus policy context.
-      </p>
-    </section>
-
-    <section class="section">
-      <div class="sectionhead">
-        <h2>Reason codes</h2>
-        <p class="hint">Stable names, stable meaning</p>
-      </div>
-
-      <div class="grid">
-        <div class="card full">
-          <table class="table">
-            <thead>
-              <tr>
-                <th style="width:34%">Code</th>
-                <th style="width:20%">Category</th>
-                <th>Description</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td class="mono">avg_fee_below_minimum</td>
-                <td>fees</td>
-                <td>
-                  Average fee per transaction (<span class="mono">total_fees / tx_count</span>) is below the effective minimum
-                  (<span class="mono">min_avg_fee_used</span>) for the selected <span class="mono">fee_tier</span>.
-                  Effective minimum is derived from <span class="mono">min_avg_fee_lo</span>, <span class="mono">min_avg_fee_mid</span>,
-                  <span class="mono">min_avg_fee_hi</span> and mempool tier thresholds.
-                </td>
-              </tr>
-
-              <tr>
-                <td class="mono">total_fees_below_minimum</td>
-                <td>fees</td>
-                <td>
-                  Total fees implied by the template are below <span class="mono">min_total_fees</span>.
-                </td>
-              </tr>
-
-              <tr>
-                <td class="mono">coinbase_value_zero_rejected</td>
-                <td>template</td>
-                <td>
-                  <span class="mono">coinbase_value</span> is zero and <span class="mono">reject_coinbase_zero</span> is enabled
-                  (applies to non empty templates: <span class="mono">tx_count &gt; 0</span>).
-                </td>
-              </tr>
-
-              <tr>
-                <td class="mono">tx_count_exceeded</td>
-                <td>limits</td>
-                <td>
-                  Template <span class="mono">tx_count</span> exceeds <span class="mono">max_tx_count</span>.
-                </td>
-              </tr>
-
-              <tr>
-                <td class="mono">prev_hash_len_mismatch</td>
-                <td>template</td>
-                <td>
-                  <span class="mono">prev_hash</span> length does not match <span class="mono">required_prevhash_len</span>.
-                </td>
-              </tr>
-
-              <tr>
-                <td class="mono">protocol_version_mismatch</td>
-                <td>policy</td>
-                <td>
-                  Template protocol version does not match <span class="mono">protocol_version</span>.
-                </td>
-              </tr>
-
-              <tr>
-                <td class="mono">invalid_prev_hash</td>
-                <td>template</td>
-                <td>
-                  <span class="mono">prev_hash</span> is not valid hex.
-                </td>
-              </tr>
-
-              <tr>
-                <td class="mono">empty_template_rejected</td>
-                <td>template</td>
-                <td>
-                  <span class="mono">tx_count == 0</span> and <span class="mono">reject_empty_templates</span> is enabled.
-                </td>
-              </tr>
-
-              <tr>
-                <td class="mono">ok</td>
-                <td>verdict</td>
-                <td>
-                  Template accepted.
-                </td>
-              </tr>
-            </tbody>
-          </table>
-
-          <p class="hint" style="margin-top:12px">
-            <span class="mono">reason_code</span> is the stable contract. UI labels and internal enum names may change without notice.
-          </p>
-        </div>
-      </div>
-    </section>
-
-
-    <section class="section">
-      <div class="sectionhead">
-        <h2>Sample policy.toml</h2>
-        <p class="hint">Readable and diffable</p>
-      </div>
-
-      <div class="grid">
-        <div class="card full">
-          <div class="codepanel">
-            <button class="copybtn" onclick="copyTextFrom('policy')">Copy</button>
-<pre id="policy"># Example only. 
-
-[policy]
-protocol_version = 2
-required_prevhash_len = 64
-
-min_total_fees = 0
-max_tx_count = 12
-
-low_mempool_tx = 5
-high_mempool_tx = 20
-
-# avg fee floors are sats/tx (NOT sat/vB)
-# ~1 sat/vB  => ~150-250 sats/tx (reject)
-# ~25 sat/vB => ~3_750-6_250 sats/tx (accept)
-min_avg_fee_lo  = 900
-min_avg_fee_mid = 1900
-min_avg_fee_hi  = 4200
-
-reject_empty_templates = true
-reject_coinbase_zero = false
-unknown_mempool_as_high = false
-
-[policy.safety]
-max_weight_ratio = 0.999</pre>
-          </div>
-
-          <div class="hr"></div>
-          <div class="kv">
-            <div class="k">Tier input</div><div class="v">mempool tx count (or unknown fallback)</div>
-            <div class="k">Tier output</div><div class="v mono">low | mid | high</div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="section">
-      <div class="sectionhead">
-        <h2>Traceable reject contract</h2>
-        <p class="hint">What integrations can rely on</p>
-      </div>
-
-      <div class="grid">
-        <div class="card full">
-          <div class="codepanel">
-            <button class="copybtn" onclick="copyTextFrom('contract')">Copy</button>
-<pre id="contract">{
-  "accepted": false,
-  "reason_code": "avg_fee_below_minimum",
-  "reason_detail": "avg_fee=141 &lt; min_avg_fee_used=200",
-  "policy_context": {
-    "fee_tier": "mid",
-    "min_avg_fee_used": 8,
-    "avg_fee_sats_per_tx": 4,
-    "mempool_tx_count": 220,
-    "unknown_mempool_as_high": true
-  }
-}</pre>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <div class="footer">
-      <div>© 2026 Veldra, Inc.</div>
-      <div>Next: <a href="/security/">Security</a></div>
-    </div>
-  </main>
+  <p>Redirecting to <a href="/docs/">Documentation</a>...</p>
 </body>
 </html>
