--- a/security/index.html
+++ b/security/index.html
@@ -2,112 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Veldra Security</title>
-  <meta name="description" content="Security boundaries and safe usage guidance for Veldra.">
-  <meta name="theme-color" content="#0b1b2b">
-
-  <link rel="icon" type="image/png" href="/assets/brand/favicon.png?v=20260120">
-  <link rel="apple-touch-icon" href="/assets/brand/veldra-mark.png?v=20260120">
-  <link rel="stylesheet" href="/assets/style.css?v=3">
-  <script src="/assets/script.js?v=3" defer></script>
+  <meta http-equiv="refresh" content="0;url=/docs/#security">
+  <link rel="canonical" href="https://veldra.org/docs/">
+  <title>Redirecting to Documentation</title>
 </head>
-
 <body>
-  <div class="topbar">
-    <div class="container">
-      <div class="nav">
-        <a class="brand" href="/" aria-label="Veldra home">
-          <img src="/assets/brand/veldra-logo.png?v=20260120" alt="Veldra">
-        </a>
-
-        <div class="navlinks">
-          <a href="/">Home</a>
-          <a href="/demo/">Demo</a>
-          <a href="/how-it-works/">How it works</a>
-          <a href="/policy/">Policy</a>
-          <a aria-current="page" href="/security/">Security</a>
-          <a href="/about/">About</a>
-        </div>
-
-        <div class="navcta">
-          <a class="btn primary" href="/demo/">View demo</a>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <main class="container">
-    <section class="hero">
-      <div class="kicker"><span class="kdot"></span> Security</div>
-      <h1>Boundaries and safe defaults</h1>
-      <p class="lede">
-        Veldra gives infrastructure. Treat the dashboard and APIs as sensitive operational surfaces.
-      </p>
-    </section>
-
-    <section class="section">
-      <div class="sectionhead">
-        <h2>Scope</h2>
-        <p class="hint">What this project does and does not do</p>
-      </div>
-
-      <div class="grid">
-        <div class="card">
-          <h3>What it is</h3>
-          <p>Policy evaluation and observability for block templates.</p>
-          <div class="hr"></div>
-          <ul class="list">
-            <li>Verifier + dashboard</li>
-            <li>Policy driven thresholds</li>
-            <li>Deterministic verdict objects</li>
-          </ul>
-        </div>
-
-        <div class="card">
-          <h3>What it is not</h3>
-          <p>No custody, no keys, no signing authority.</p>
-          <div class="hr"></div>
-          <ul class="list">
-            <li>No private key handling</li>
-            <li>No wallet logic</li>
-            <li>No pool payout logic</li>
-          </ul>
-        </div>
-
-        <div class="card full">
-          <h3>Hard rule</h3>
-          <p>Do not expose the dashboard to the public internet without authentication and network hardening.</p>
-        </div>
-      </div>
-    </section>
-
-    <section class="section">
-      <div class="sectionhead">
-        <h2>Operational guidance</h2>
-        <p class="hint">Baseline hygiene</p>
-      </div>
-
-      <div class="grid">
-        <div class="card">
-          <h3>Local-first</h3>
-          <p>Keep regtest demos local. Assume endpoints leak operational details.</p>
-        </div>
-        <div class="card">
-          <h3>Logs</h3>
-          <p>Store verdict logs securely. They reveal policy and template characteristics.</p>
-        </div>
-        <div class="card">
-          <h3>Authentication</h3>
-          <p>If you must share access, put the UI behind auth and restrict by IP.</p>
-        </div>
-      </div>
-    </section>
-
-    <div class="footer">
-      <div>© 2026 Veldra, Inc.</div>
-      <div><a href="/about/">Contact</a></div>
-    </div>
-  </main>
+  <p>Redirecting to <a href="/docs/#security">Documentation</a>...</p>
 </body>
 </html>
